[package]
name = "vp"
version = "0.1.2"
authors = ["Marc Winners <marcwinners@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A program to spawn $EDITOR for use in pipe commands."
readme = "README.md"
edition = "2018"
homepage = "https://github.com/mw/vp"
repository = "https://github.com/mw/vp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
errno = "0.2"
libc = "0.2"
tempfile = "3.1"

